fixed navbar on mobile

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -263,7 +263,7 @@ p {
 
 .navbar {
   background-color: #1e2434;
-  height: 4rem;
+  
 }
 
 .reply-comment {
@@ -276,10 +276,3 @@ p {
   display: none;
 }
 
-.right-menu{
-  display: flex;
-  justify-content: space-around;
-  width: 300px;
-
-
-}
